# bipsim

./: Makefile.am  README  README.md  configure.ac  doxygen.in  run_application_note.sh
AN_agregated_stacked/: post_treatment.R  run.sh
AN_detailed/: run.sh
AN_detailed_constant/: post_treatment.R
AN_detailed_stacked/: run.sh
AN_hybrid_stacked/: run.sh
application_note/: application_note.R  post_treatment.R
data/: .gitignore  Full_DNA_seq_bsub.mat  add_TU.m  adjust_TU_size.m  check_gene_on_TU.m  check_position_order.m  extract_data.m  gene_list.txt  generate_AN_simulations.py  generate_DNA_sequences.m  generate_RNA_proteins.m  generate_RNA_sequences.m  generate_minimal_paulsson.py  generate_n_cascade.py  generate_simulator_files.py  get_RBS_and_start_positions.m  get_RBS_start_and_stop_positions.m  get_RNA_RBS_list.m  get_RNA_positions.m  get_RNAs.m  get_complementary_sequence.m  log.txt  play_sound.m  protein_name.m  proteins.txt  translation.in  write_TU_gene_list.py  write_protein_list.py
input/: dna_info.in  format.in  injection_ppGpp.in  metabolites.in  params.in  protein_info.in  proteins.in  replication.in  rna_degradation.in  rna_info.in  rnas.in  test.in  test_params.in  test_proteins.in  test_rnas.in  tetracyclin.in  transcription.in  transcription.sh  translation.in
multifork/: run.sh
ncascades/: generate_n_cascade.py
paulsson_agregated/: post_treatment.R  run.sh
paulsson_detailed/: post_treatment.R
python/: Jamroot  Makefile.am  export_bipsim.cpp
sample/: README  format.in  params.in  params_tetracyclin.in  run.sh
scripts/: add_concentrations.R  application_note.R  load_concentrations.R  load_replication.R  myplot.R  paulsson.py  paulsson_post_treatment.R  plot_DNA.R  plot_concentrations.R  run_AN_wo_injection.sh  run_multifork.sh  run_paulsson.sh  save_concentrations.R
simulations/: .gitignore  0317_number_proteins_per_mrna.ipynb  ISSUES.md  README.md  generate_gene_expression.py  generate_paulsson.py  generate_simulator_files.py  run_application_note.sh  run_simulations.sh
source/: .gitignore  ISSUES.md  Makefile.in  README  README.md  aclocal.m4  config.h.in  configure  configure.ac  doxygen.in
source/python/: Makefile.am  Makefile.in  bipsim.hpp
source/sample/: README
source/sample/input/: rnas.in  transcription.in
source/scripts/: generate_degradation.py
source/src/: Makefile.am  Makefile.in  biasedwheel.cpp  bindingsitefamily.h  boundchemical.cpp  boundchemical.h  boundunit.cpp  boundunitlist.h  cellstate.cpp  chemicalreaction.h  chemicalsequence.cpp  constantrategroup.cpp  dependencyratemanager.h  doublestrand.h  doublestrandlogger.h  doublestrandrecruitment.h  familyfilter.cpp  file.cpp.template  freechemical.h  handler.h  hybridratecontainer.cpp  inputdata.h  inputline.h  loading.h  loadingtable.cpp  loadingtable.h  logger.h  main.cpp  manualdispatchsolver.cpp  manualdispatchsolver.h  naiveratemanager.cpp  naivesolver.cpp  naivesolver.h  parser.cpp  parser.h  partialstrand.cpp  partialstrand_old.h  ratecontainerfactory.h  rategroup.h  ratemanager.cpp  (+25 more)
source/tests/: Makefile.am  Makefile.in
source/tests/integration/: Makefile.in
source/tests/integration/missing_tRNA/: run_test.sh  scenario.txt
source/tests/integration/scripts/: README
source/tests/integration/tRNA_consumption/: test.cpp
source/tests/integration/tRNA_consumption/input/: input.in
source/tests/integration/test_template/: run_test.sh  scenario.txt
source/tests/integration/test_template/input/: input.in
source/tests/unit_tests/: Makefile.in  advancement.txt  boundchemical_test.cpp  boundunitlist_test.cpp  chemicalreaction_test.cpp  experimentalcumulative.h  inputdata_test.cpp  randomhandler_test.cpp  sitedispenser.h
src/: Makefile.am  addevent.cpp  addevent.h  backwardreaction.h  baseloader.cpp  baseloader.h  baseloading.cpp  baseloading.h  biasedwheel.cpp  biasedwheel.h  bidirectionalreaction.cpp  bidirectionalreaction.h  bindable.cpp  bindable.h  binding.cpp  binding.h  bindingsite.cpp  bindingsite.h  bindingsitefamily.cpp  bindingsitefamily.h  bindingsitehandler.cpp  bindingsitehandler.h  bindingsiteobserver.cpp  bindingsiteobserver.h  boundchemical.cpp  boundchemical.h  boundunit.cpp  boundunit.h  boundunitfactory.cpp  boundunitfactory.h  boundunitfilter.h  boundunitlist.cpp  boundunitlist.h  builder.h  cellstate.cpp  cellstate.h  chemical.cpp  chemical.h  chemicalhandler.cpp  chemicalhandler.h  (+201 more)
test/: run.sh
test_agregated/: run.sh
tests/: Makefile.am  advancement.txt  biasedwheel_test.cpp  boundchemical_test.cpp  boundunitlist_test.cpp  cellstate_test.cpp  cobserverclient_test.cpp  compositiontable_test.cpp  experimentalcumulative.h  file_test.cpp.template  freechemical_test.cpp  generate_makefile.sh  hybridratecontainer_test.cpp  inputdata_test.cpp  main.cpp  mockrateinvalidator.h  partialstrand_test.cpp  producttable_test.cpp  randomhandler_test.cpp  rategroup_test.cpp  ratetree_test.cpp  sequenceoccupation_test.cpp  siteavailability_test.cpp  sitedispenser.h  sitegroup_test.cpp  transformationtable_test.cpp  unittest.h  utility.h  vectorlist_test.cpp  watchergroup_test.cpp
tests/input/: input2.in
tests/integration/: Makefile.am  README  generate_makefile.sh
tests/integration/missing_tRNA/: run_test.sh  test.cpp
tests/integration/missing_tRNA/input/: input.in  params.in
tests/integration/scripts/: distribution_test.R
tests/integration/tRNA_consumption/: run_test.sh  scenario.txt  test.cpp
tests/integration/tRNA_consumption/input/: input.in  params.in
tests/integration/test_template/: run_test.sh  test.cpp
tests/unit_tests/: Makefile.am  README  biasedwheel_test.cpp  boundchemical_test.cpp  cellstate_test.cpp  compositiontable_test.cpp  file_test.cpp.template  freechemical_test.cpp  generate_makefile.sh  hybridratecontainer_test.cpp  mockrateinvalidator.h  partialstrand_test.cpp  producttable_test.cpp  randomhandler_test.cpp  rategroup_test.cpp  ratetree_test.cpp  sequenceoccupation_test.cpp  sitegroup_test.cpp  transformationtable_test.cpp  utility.h  vectorlist_test.cpp
tests/unit_tests/input/: input1.in
(+295 files in other folders)
